--- a/template.yaml
+++ b/template.yaml
@@ -10,6 +10,21 @@ Globals:
     Timeout: 30
 
 Resources:
+  basicsActivity:
+    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+    Properties:
+      # set codeUri to nothing if lambda_function.py is in root directory
+      # if for instance, lambda_function.py in function folder, set codeUri to function/
+      CodeUri: src/basics/act
+      Handler: lambda_function.lambda_handler
+      Runtime: python3.6
+      MemorySize: 1024
+      Events:
+        basicsPandas:
+          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+          Properties:
+            Path: /basics/
+            Method: ANY
   cleaningActiving:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
