Updated Path of Activities

--- a/template.yaml
+++ b/template.yaml
@@ -23,7 +23,7 @@ Resources:
         basicsPandas:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
-            Path: /basics/
+            Path: basics/
             Method: ANY
   cleaningActiving:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
@@ -38,7 +38,7 @@ Resources:
         cleaningPandas:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
-            Path: /cleaning/
+            Path: cleaning/
             Method: ANY
   landingPage:
     Type: AWS::Serverless::Function
