--- a/template.yaml
+++ b/template.yaml
@@ -25,7 +25,7 @@ Resources:
           Properties:
             Path: basics/
             Method: ANY
-  cleaningActiving:
+  cleaningActivity:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
       # set codeUri to nothing if lambda_function.py is in root directory
@@ -39,6 +39,21 @@ Resources:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
             Path: cleaning/
+            Method: ANY
+  visualizingActivity:
+    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+    Properties:
+      # set codeUri to nothing if lambda_function.py is in root directory
+      # if for instance, lambda_function.py in function folder, set codeUri to function/
+      CodeUri: src/cleaning_act
+      Handler: lambda_function.lambda_handler
+      Runtime: python3.6
+      MemorySize: 1024
+      Events:
+        visualizingPandas:
+          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+          Properties:
+            Path: visualize/
             Method: ANY
   landingPage:
     Type: AWS::Serverless::Function
