--- a/template.yaml
+++ b/template.yaml
@@ -82,4 +82,4 @@ Resources:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
           Properties:
             Path: /
-            Method: GET
+            Method: ANY
